--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -76,6 +76,7 @@
                                     <outlet property="entryBodyTextLabel" destination="cRe-0P-Pwy" id="ZsO-iq-Kw8"/>
                                     <outlet property="entryTimestampLabel" destination="JIt-AN-mhW" id="GLO-Px-sGs"/>
                                     <outlet property="entryTitleLabel" destination="6J9-DI-4r4" id="wDY-QW-hud"/>
+                                    <segue destination="3cS-ag-S15" kind="show" identifier="ToEntryDetail" id="AuK-be-56l"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -96,6 +97,78 @@
             </objects>
             <point key="canvasLocation" x="28.985507246376812" y="-23.4375"/>
         </scene>
+        <!--EntryDetail-->
+        <scene sceneID="Rf4-BG-znV">
+            <objects>
+                <viewController title="EntryDetail" id="3cS-ag-S15" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Pi8-Gp-vap">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Wty-74-sXk">
+                                <rect key="frame" x="20" y="108" width="374" height="358.5"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9s5-WF-Gsk">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="120.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="s1D-K6-ksr">
+                                        <rect key="frame" x="0.0" y="136.5" width="374" height="32"/>
+                                        <segments>
+                                            <segment title=""/>
+                                            <segment title=""/>
+                                            <segment title=""/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5hW-vD-SWZ">
+                                        <rect key="frame" x="0.0" y="183.5" width="374" height="175"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dxq-Ny-7pm">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dXi-kF-uL6">
+                                                <rect key="frame" x="0.0" y="25" width="374" height="2"/>
+                                                <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="gZe-L0-jM7"/>
+                                                </constraints>
+                                            </view>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="m1W-gp-lsv">
+                                                <rect key="frame" x="0.0" y="35" width="374" height="140"/>
+                                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                                <color key="textColor" systemColor="labelColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="1iS-Nk-MRD"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Wty-74-sXk" firstAttribute="height" secondItem="Pi8-Gp-vap" secondAttribute="height" multiplier="0.4" id="0l2-QN-MMi"/>
+                            <constraint firstItem="Wty-74-sXk" firstAttribute="top" secondItem="1iS-Nk-MRD" secondAttribute="top" constant="20" id="H3L-6E-nx2"/>
+                            <constraint firstItem="1iS-Nk-MRD" firstAttribute="trailing" secondItem="Wty-74-sXk" secondAttribute="trailing" constant="20" id="KG6-86-NMr"/>
+                            <constraint firstItem="Wty-74-sXk" firstAttribute="leading" secondItem="1iS-Nk-MRD" secondAttribute="leading" constant="20" id="ezZ-7M-zf1"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="i23-Jc-u7k"/>
+                    <connections>
+                        <outlet property="bodyTextView" destination="m1W-gp-lsv" id="fLW-LY-1ys"/>
+                        <outlet property="moodSegmentedControl" destination="s1D-K6-ksr" id="AHB-nG-ATM"/>
+                        <outlet property="titleTextField" destination="9s5-WF-Gsk" id="w3X-jy-RNc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bHv-Mw-y2i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1009" y="-23"/>
+        </scene>
         <!--Create Entry View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -112,8 +185,16 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="2RD-mN-b82">
+                                        <rect key="frame" x="0.0" y="37" width="374" height="32"/>
+                                        <segments>
+                                            <segment title=""/>
+                                            <segment title=""/>
+                                            <segment title=""/>
+                                        </segments>
+                                    </segmentedControl>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ofj-KQ-2DL">
-                                        <rect key="frame" x="0.0" y="37" width="374" height="222"/>
+                                        <rect key="frame" x="0.0" y="84" width="374" height="175"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sdp-An-2hP">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="17"/>
@@ -129,7 +210,7 @@
                                                 </constraints>
                                             </view>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="AM9-JM-LEO">
-                                                <rect key="frame" x="0.0" y="35" width="374" height="187"/>
+                                                <rect key="frame" x="0.0" y="35" width="374" height="140"/>
                                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                                 <color key="textColor" systemColor="labelColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -166,6 +247,7 @@
                     <connections>
                         <outlet property="entryBodyTextView" destination="AM9-JM-LEO" id="M6l-uM-buc"/>
                         <outlet property="entryTitleTextField" destination="7c0-PU-h3p" id="Tf1-b6-ZnF"/>
+                        <outlet property="moodSegmentedControl" destination="2RD-mN-b82" id="MUA-4g-hF2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
